# spectrum_awareness

./: .gitignore  CMakeLists.txt  main_plot_spectrum.cpp  spectrum_awareness.kdev4
configs/: default.xml  defualt_emulator.xml
src/hardware/HardwareBase/: baseProc.h  baseSched.h
src/hardware/hackrf/: processor.cpp  processor.h  scheduler.cpp  scheduler.h
src/hardware/hackrf/driver/: device_setup.h  hackrf.c
src/qtplot/: qtWindow.cpp  qtWindow.h  qtplot.cpp  qtplot.h
src/signal_processing/: cfar.cpp  cfar.h  fft.cpp  fft.h  fftFilter.h  filter.h  histogram.h
src/udp/: udpBase.cpp  udpBase.h
src/util/: radarDataTypes.h
src/util/buffer/: memBuffer.cpp  memBuffer.h
src/util/config_parser/: configParser.cpp  configParser.h
src/util/logger/: consoleLog.cpp  consoleLog.h  databaseLogger.cpp  databaseLogger.h
src/util/math/: volk_math.cpp  volk_math.h
src/util/protoBuffs/: protoBuffDef.pb.cc  protoBuffDef.pb.h  protoBuffDef.proto
src/util/timing/: timing.cpp  timing.h
tests/: CMakeLists.txt  main_cfar_unittest.cpp  main_fft_test.cpp
